# KFS_N

./: .gitignore  Cargo.toml  DEBUG_QUICK_REF.md  Dockerfile  Makefile  README.md  Readme.md  TODO.md  bochsrc.txt  gdb_init.gdb  i386-unknown-none.json  i686-unknown-none.json  install.sh  interrupts.md  progess.md  tracking.md
.cargo/: config.toml
src/: boot.rs  gdt.rs  handlers.rs  idt.rs  interrupts.rs  keyboard.rs  lib.rs  panic.rs  pic.rs  serial.rs  signals.rs  timer.rs  utils.rs  vga.rs
src/arch/i386/: boot.asm  bootstrap.asm  i386-unknown-none.json  linker.ld
src/arch/i686/: boot.asm  i686-unknown-none.json  interrupt.asm  linker.ld
src/commands/: clear.rs  custom.rs  echo.rs  list.rs  mod.rs  print_ft_42.rs  print_stack.rs
src/gdt/: define.rs  descriptor.rs  mod.rs  tss.rs
src/grub/: grub.cfg
src/interrupts/: define.rs  handlers.rs  idt.rs  interrupts.rs  mod.rs  pic.rs  structures.rs
src/keyboard/: layouts.rs  mod.rs
src/memori/: mod.rs  virtualmem.rs
src/memory/: allocator.rs  define.rs  directory.rs  heap.rs  mod.rs  pageflags.rs  pagetable.rs  paging.rs  physical.rs  table.rs  test.rs  virtualmem.rs  vmm.rs
src/multiboot2/: meminfo.rs  mod.rs
src/shell/: mod.rs  processor.rs
src/shell/commands/: clear.rs  colors.rs  credits.rs  echo.rs  meminfo.rs  mod.rs  paint.rs  parse.rs  print_ft_42.rs  print_stack.rs  setkb.rs  shutdown.rs  snake.rs  timer.rs  timerctrl.rs  vfree.rs  vmalloc.rs  vread.rs  vsize.rs  vwrite.rs
src/vga/: mod.rs
