[package]
name = "kfs"
version = "0.2.0"
edition = "2021"
[lib]
crate-type = ["staticlib"]
[profile.dev]
panic = "abort"
debug = true
[profile.release]
panic = "abort"
[target.'cfg(target_os = "none")']
rustflags = ["-C", "link-arg=-Tlinker.ld"]
[features]
gdt_test = []
verbose = []

[dependencies]
spin = "0.9.8"
[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]
