[package]
name = "kfs"
version = "0.2.0"
edition = "2021"
[lib]
crate-type = ["staticlib"]
[profile.dev]
panic = "abort"
debug = true
verbose = false
[profile.release]
panic = "abort"
[target.'cfg(target_os = "none")']
rustflags = ["-C", "link-arg=-Tlinker.ld"]
[features]
default = []
gdt_test = []
verbose = []
debug = []
alloc_test = []


[dependencies]
spin = "0.9.8"
[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]
